--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             notice that "src" is a way to direct the path to the file - the obj and mtl file is within the assets folder
 -->
             <a-assets>
-                <a-asset-item id="school_02-obj" src="assets/school_02.obj"></a-asset-item>
-                <a-asset-item id="school_02-mtl" src="assets/school_02.mtl"></a-asset-item>
+                <a-asset-item id="school_02-obj" src="assets/school_02.obj" timeout="10000"></a-asset-item>
+                <a-asset-item id="school_02-mtl" src="assets/school_02.mtl" timeout="10000"></a-asset-item>
             </a-assets>
 
             
