--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
         <!-- include ar.js for A-Frame -->
         <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
+        <script src="https://cdn.glitch.global/c03f9d59-ca83-485b-9fd9-599c39bcbbcd/aframe-master.js"></script>
 
     </head>
     <body>
